--- a/front/Front3DePrint/src/app/board-admin/board-admin.component.html
+++ b/front/Front3DePrint/src/app/board-admin/board-admin.component.html
@@ -28,12 +28,12 @@
 
     <ul class="card list-group list-group-flush" *ngFor="let bill of bills">
       <li class="card-body list-group-item">
-        <h5 class="card-title">Facture N° {{ bill.id }}</h5>
-        <p class="card-text">date : {{ bill.billDate }}</p>
-        <p class="card-text">client id : {{ bill.customUser.id }}</p>
+        <h5 class="card-title">Facture N° {{ bill.id }} du {{ bill.billDate }}</h5>
+        <p class="card-text">client id : {{ bill.customUserId }}</p>
+        <p class="card-text">Adresse : {{ bill.num }}, {{ bill.street }}, {{ bill.postal }} {{ bill.town }}, {{ bill.country }} </p>
+        <p class="card-text">Email: {{ bill.email }}</p>
         <p class="card-text">nb articles : {{ bill.totalItem }}</p>
-        <p class="card-text">Prix HT : {{ bill.totalPriceHT }}</p>
-        <p class="card-text">Prix TTC : {{ bill.totalPriceTTC }}</p>
+        <p class="card-text">Prix HT : {{ bill.totalPriceHT }} € + TVA 20% = <span>Prix TTC : {{ bill.totalPriceTTC }} €</span></p>
 <!--         <p class="card-text">Nom : {{ bill.customUser.firstname }} {{ bill.customUser.lastname }} / Email :
           {{bill.customUser.email}}</p>
         <p class="card-text">Addresse : {{ bill.customUser.address.num }}, {{ bill.customUser.address.street }} -
