--- a/front/Front3DePrint/src/app/app.component.html
+++ b/front/Front3DePrint/src/app/app.component.html
@@ -19,13 +19,13 @@
         <a href="/profile" class="nav-link" *ngIf="isLoggedIn && showUserBoard" routerLink="profile" routerLinkActive="active"><i class="fa fa-id-card-o fa-2x"></i> Profil</a>
       </li>
        <li class="nav-item">
-        <a href="/users" class="nav-link" *ngIf="isLoggedIn && showAdminBoard" routerLink="users"><i class="fa fa-user fa-2x"></i> Utilisateurs</a>
+        <a href="/users" class="nav-link" *ngIf="isLoggedIn && showAdminBoard" routerLink="users"><i class="fa fa-user fa-2x"></i> Clients</a>
       </li>
       <li class="nav-item">
         <a href="/upload" class="nav-link" *ngIf="isLoggedIn && showUserBoard" routerLink="upload"><i class="fa fa-file-image-o fa-2x"></i> Images</a>
       </li>
        <li class="nav-item">
-        <a href="/adminfiles" class="nav-link" *ngIf="isLoggedIn && showAdminBoard" routerLink="adminfiles"><i class="fa fa-file-image-o fa-2x"></i> Images</a>
+        <a href="/adminfiles" class="nav-link" *ngIf="isLoggedIn && showAdminBoard" routerLink="adminfiles"><i class="fa fa-file-image-o fa-2x"></i> Objets/Devis</a>
       </li>
     </ul>
 
