--- a/front/Front3DePrint/src/app/files/upload-files/upload-files.component.html
+++ b/front/Front3DePrint/src/app/files/upload-files/upload-files.component.html
@@ -11,8 +11,8 @@
   </div>
 </div>
 <div>
-<label class="btn btn-default">
-  <input type="file" accept=".stl, .STL" (change)="selectFile($event)" />
+  <label class="btn btn-default">
+    <input class="files" type="file" accept=".stl, .STL" (change)="selectFile($event)" />
   </label>
 </div>
 <button class="btn btn-success" [disabled]="!selectedFiles" (click)="upload()">
