--- a/front/Front3DePrint/src/app/login/login.component.html
+++ b/front/Front3DePrint/src/app/login/login.component.html
@@ -15,7 +15,7 @@
       novalidate
     >
       <div class="form-group">
-        <label for="username">Username</label>
+        <label for="username">Surnom</label>
         <input
           type="text"
           class="form-control"
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="password">Password</label>
+        <label for="password">Mot de passe</label>
         <input
           type="password"
           class="form-control"
