--- a/front/Front3DePrint/src/app/register/register.component.html
+++ b/front/Front3DePrint/src/app/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-<div class="card card-container">
+<div class="card card-container p-5">
 	<div class="text-center">
 		<img
 		id="profile-img"
@@ -15,7 +15,7 @@
       novalidate
     >
       <div class="form-group">
-        <label for="username">Username</label>
+        <label for="username">Surnom</label>
         <input
           type="text"
           class="form-control"
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="firstname">Firstname</label>
+        <label for="firstname">Prénom</label>
         <input
           type="text"
           class="form-control"
@@ -59,7 +59,7 @@
         </div>
       </div>
             <div class="form-group">
-        <label for="lastname">Lastname</label>
+        <label for="lastname">Nom</label>
         <input
           type="text"
           class="form-control"
@@ -101,7 +101,7 @@
 
 
       <div class="form-group">
-        <label for="password">Password</label>
+        <label for="password">Mot de passe</label>
         <input
           type="password"
           class="form-control"
@@ -121,7 +121,7 @@
       
 
       <div class="form-group">
-        <button class="btn btn-primary btn-block">Sign Up</button>
+        <button class="btn btn-primary btn-block">S'enregistrer</button>
       </div>
 
       <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
