--- a/front/Front3DePrint/src/app/register/register.component.html
+++ b/front/Front3DePrint/src/app/register/register.component.html
@@ -125,7 +125,7 @@
       </div>
 
       <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
-        Echec de l'enregistrement<br />{{ errorMessage }}
+        Echec de l'enregistrement {{ errorMessage }}
       </div>
     </form>
 
