--- a/front/Front3DePrint/src/app/app.component.html
+++ b/front/Front3DePrint/src/app/app.component.html
@@ -1,3 +1,9 @@
+<mat-sidenav-container>
+  <app-header (sidenavToggle)="sidenav.toggle()"></app-header>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</mat-sidenav-container>
 <div id="app">
   <nav class="navbar navbar-expand navbar-light"  routerLinkActive="active">
     <a href="/home" class="navbar-brand"><img
