--- a/front/Front3DePrint/src/app/app.component.html
+++ b/front/Front3DePrint/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div id="app">
-  <nav class="navbar navbar-expand-lg navbar-light">
+<div id="app" class="container-fluid">
+  <nav class="navbar navbar-header navbar-expand-lg navbar-light">
     <a href="/home" class="navbar-brand">
       <img
       id="profile-img"
@@ -10,7 +10,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mx-auto">
         <li class="nav-item">
           <a href="/home" class="nav-item nav-link"  routerLinkActive="active"  *ngIf="isLoggedIn && showUserBoard" routerLink="home"><i class="fa fa-home fa-2x"></i><span class="sr-only">(current)</span> Site</a>
         </li>
