pb error handler

--- a/front/Front3DePrint/src/app/login/login.component.html
+++ b/front/Front3DePrint/src/app/login/login.component.html
@@ -4,7 +4,7 @@
 		<img
 		id="profile-img"
 		src="../assets/images/avatar.png"
-		class="profile-img-card img-fluid w-25"
+		class="profile-img-card img-fluid w-15"
 		/>
 	</div>
     <form
@@ -69,7 +69,7 @@
       </div>
     </form>
 
-    <div class="alert alert-success" *ngIf="isLoggedIn">
+    <div class="alert alert-success d-flex justify-content-center m-2" *ngIf="isLoggedIn">
       Connecté en tant que :  {{ username }}.
     </div>
   </div>
