--- a/front/Front3DePrint/src/app/navigation/header/header.component.html
+++ b/front/Front3DePrint/src/app/navigation/header/header.component.html
@@ -1,20 +1,53 @@
-<mat-toolbar color="primary">
-  <div fxHide.gt-xs>
-      <button mat-icon-button (click)="onToggleSidenav()">
-          <mat-icon>menu</mat-icon>
-      </button>
-  </div>
-  <div>
-      <a routerLink="/home">Owner-Account</a>
-  </div>
-  <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
-      <ul fxLayout fxLayoutGap="15px" class="navigation-items">
-          <li>
-              <a routerLink="/owner">Owner Actions</a>
-          </li>
-          <li>
-              <a routerLink="/account">Account Actions</a>
-          </li>
+<nav class="navbar navbar-header navbar-expand-lg navbar-light">
+    <a href="/home" class="navbar-brand">
+      <img
+      id="profile-img"
+      src="../assets/images/logo-3deprint.png"
+      class="profile-img-card img-fluid w-75"/>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item">
+          <a href="/home" class="nav-item nav-link"  routerLinkActive="active"  *ngIf="isLoggedIn && showUserBoard" routerLink="home"><i class="fa fa-home fa-2x"></i><span class="sr-only">(current)</span> Site</a>
+        </li>
+        <li class="nav-item" *ngIf="showAdminBoard">
+          <a href="/admin" class="nav-link" routerLink="admin"><i class="fa fa-eye fa-2x"></i> Gestion des commandes</a>
+        </li>
+        <li class="nav-item">
+          <a href="/user" class="nav-link" *ngIf="isLoggedIn && showUserBoard" routerLink="user" routerLinkActive="active"><i class="fa fa-eye fa-2x"></i> Espace privé</a>
+        </li>
+        <li class="nav-item">
+          <a href="/profile" class="nav-link" *ngIf="isLoggedIn && showUserBoard" routerLink="profile" routerLinkActive="active"><i class="fa fa-id-card-o fa-2x"></i> Profil</a>
+        </li>
+        <li class="nav-item">
+          <a href="/users" class="nav-link" *ngIf="isLoggedIn && showAdminBoard" routerLink="users"><i class="fa fa-user fa-2x"></i> Clients</a>
+        </li>
+        <li class="nav-item">
+          <a href="/upload" class="nav-link" *ngIf="isLoggedIn && showUserBoard" routerLink="upload"><i class="fa fa-file-image-o fa-2x"></i> Images</a>
+        </li>
+        <li class="nav-item">
+          <a href="/adminfiles" class="nav-link" *ngIf="isLoggedIn && showAdminBoard" routerLink="adminfiles"><i class="fa fa-file-image-o fa-2x"></i> Objets/Devis</a>
+        </li>
       </ul>
-  </div>
-</mat-toolbar>
+
+      <ul class="navbar-nav ml-auto" *ngIf="!isLoggedIn">
+        <li class="nav-item">
+          <a href="/register" class="nav-link" routerLink="register"><i class="fa fa-sign-in" aria-hidden="true"></i> Créer un compte</a>
+        </li>
+        <li class="nav-item">
+          <a href="/login" class="nav-link" routerLink="login"><i class="fa fa-user" aria-hidden="true"></i> Se connecter</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
+        <li class="nav-item">
+          <a href="/profile" class="nav-link" routerLink="profile">Bienvenue {{ username }}</a>
+        </li>
+        <li class="nav-item">
+          <a href class="nav-link" (click)="logout()"><i class="fa fa-sign-out" aria-hidden="true"></i> Déconnexion</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
