--- a/front/Front3DePrint/src/app/register/register.component.html
+++ b/front/Front3DePrint/src/app/register/register.component.html
@@ -92,7 +92,7 @@
           #email="ngModel"
         />
         <div class="alert-danger" *ngIf="f.submitted && email.invalid">
-          <div *ngIf="email.errors.required">L'email est requis</div>
+          <div *ngIf="email.errors.required">un email est requis</div>
           <div *ngIf="email.errors.email">
             Email invalide, le format doit être <i>john@doe.com</i>.
           </div>
@@ -114,14 +114,14 @@
         <div class="alert-danger" *ngIf="f.submitted && password.invalid">
           <div *ngIf="password.errors.required">Le mot de passe est requis</div>
           <div *ngIf="password.errors.minlength">
-            le mot de passe doit comporter au moins 8 charactères
+            le mot de passe doit comporter au moins 8 charactères, 1 majuscule, 1 minuscule, 1 nombre et 1 caractère spécial,
           </div>
         </div>
       </div>
       
       
       <div class="form-group">
-        <button class="btn btn-primary btn-block">S'enregistrer</button>
+        <button class="btn btn-primary">S'enregistrer</button>
       </div>
 
       <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
