--- a/front/Front3DePrint/src/app/login/login.component.html
+++ b/front/Front3DePrint/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-  <div class="card card-container">
+  <div class="card card-container p-5">
     	<div class="text-center">
 		<img
 		id="profile-img"
@@ -29,7 +29,7 @@
           role="alert"
           *ngIf="f.submitted && username.invalid"
         >
-          Username is required!
+          surnom requis!
         </div>
       </div>
       <div class="form-group">
@@ -48,16 +48,18 @@
           role="alert"
           *ngIf="f.submitted && password.invalid"
         >
-          <div *ngIf="password.errors.required">Password is required</div>
+          <div *ngIf="password.errors.required">Mot de passe requis</div>
           <div *ngIf="password.errors.minlength">
-            Password must be at least 6 characters
+            Le mot de passe doit avoir au moins 8 charactères
           </div>
         </div>
       </div>
       <div class="form-group">
-        <button class="btn btn-primary btn-block">
-          Login
-        </button>
+        <div class="d-flex justify-content-center">
+          <button class="btn btn-primary">
+            Connexion
+          </button>
+         </div> 
       </div>
       <div class="form-group">
         <div
