--- a/front/Front3DePrint/src/app/navigation/header/header.component.html
+++ b/front/Front3DePrint/src/app/navigation/header/header.component.html
@@ -5,10 +5,10 @@
       src="../assets/images/logo-3deprint.png"
       class="profile-img-card img-fluid w-75"/>
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse" id="navbarNav" [ngbCollapse]="isCollapsed">
       <ul class="navbar-nav mx-auto">
         <li class="nav-item">
           <a href="/home" class="nav-item nav-link"  routerLinkActive="active"  *ngIf="isLoggedIn && showUserBoard" routerLink="home"><i class="fa fa-home fa-2x"></i><span class="sr-only">(current)</span> Site</a>
