cleaning in progress

--- a/front/Front3DePrint/src/app/register/register.component.html
+++ b/front/Front3DePrint/src/app/register/register.component.html
@@ -122,7 +122,7 @@
       
       <div class="form-group">
         <div class="d-flex justify-content-center">
-          <button class="btn btn-primary">Senregistrer</button>
+          <button class="btn btn-primary">Créer votre compte</button>
         </div>
       </div>
       <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
