--- a/front/Front3DePrint/src/app/navigation/header/header.component.css
+++ b/front/Front3DePrint/src/app/navigation/header/header.component.css
@@ -17,7 +17,9 @@ a:active {
 mat-toolbar {
   border-radius: 3px;
 }
-
+#cb {
+  background-color: black;
+}
 @media(max-width: 959px) {
   mat-toolbar {
     border-radius: 0px;
