--- a/front/Front3DePrint/src/app/register/register.component.html
+++ b/front/Front3DePrint/src/app/register/register.component.html
@@ -131,7 +131,7 @@
     </form>
 
     <div class="alert alert-success" *ngIf="isSuccessful">
-      Votre compte à bien été créer!
+      Votre compte à bien été créé !
     </div>
   </div>
 </div>
