--- a/front/Front3DePrint/src/app/home/home.component.html
+++ b/front/Front3DePrint/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<figure class="figure w-75">
-  <img src="../assets/images/artillery.jpg" style ="width: 30%" class="figure-img img-fluid rounded float-left shadow-lg p-3 mb-5 bg-white" alt="imprimante 3D Artillery Sidewinder X1">
+<figure class="figure">
+  <img src="../assets/images/artillery.png" style ="width: 30%" class="figure-img img-fluid rounded float-left shadow-lg p-3 mb-5 bg-white" alt="imprimante 3D Artillery Sidewinder X1">
 </figure>
 <figure class="figure">
-  <img src="../assets/images/lablists.jpg" style ="width: 30%" class="figure-img img-fluid rounded float-right shadow-lg p-3 mb-5 bg-white" alt="imprimante 3D Lablists">
+  <img src="../assets/images/lablists.png" style ="width: 30%" class="figure-img img-fluid rounded float-right shadow-lg p-3 mb-5 bg-white" alt="imprimante 3D Lablists">
 </figure>
