--- a/front/Front3DePrint/src/app/files/admin-list-files/admin-list-files.component.html
+++ b/front/Front3DePrint/src/app/files/admin-list-files/admin-list-files.component.html
@@ -31,7 +31,7 @@
             <p>Quantité à imprimer : {{order.quantity}}</p>
             <p>temps total d'impression : {{ order.timeToPrint}}</p>
             <p>Poids total : {{ order.totalWeight }} gs</p>
-            <p>Prix total : {{ order.totalPrice }} €</p>
+            <p>Prix total : {{ order.totalPrice }} € HT</p>
           </li>
         </ul>
    </div>
